APF-997-Added docker image for airwatch connector.